--- a/co/edu/unbosque/view/templates/propietario.html
+++ b/co/edu/unbosque/view/templates/propietario.html
@@ -60,7 +60,7 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" id="pago-tab" data-toggle="tab" href="#pago" role="tab" aria-controls="pago"
-               aria-selected="false" >Pago de factura </a>
+               aria-selected="false">Pago de factura </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" id="find-tab" data-toggle="tab" href="#find" role="tab" aria-controls="find"
@@ -141,7 +141,32 @@
                     <th scope="col">Ver detalle</th>
                     <th scope="col">Pagar</th>
                 </tr>
+
                 </thead>
+                <tbody>
+
+                {% for factura in factura %}
+                <tr>
+                    <td>{{factura[0]}}</td>
+                    <td>{{factura[1]}}</td>
+                    <td>{{factura[2]}}</td>
+                    <td>{{factura[3]}}</td>
+                    <td>
+
+                        <button type="button" id="1" value="{{factura[0]}}" name='{{factura[2]}}'
+                                class='{{factura[3]}}' onclick="botonDetalle()">Ver
+                        </button>
+
+                    </td>
+                    <td>
+                        <button type="button" id="2" value="{{factura[0]}}" name='{{factura[2]}}' class='{{factura[3]}}'
+                                onclick="botonPago()">Pagar
+                        </button>
+
+                    </td>
+                </tr>
+                {% endfor %}
+                </tbody>
             </table>
 
         </div>
@@ -179,6 +204,15 @@
                         <th scope="col">Tarifa</th>
                     </tr>
                     </thead>
+                    <tbody>
+
+                    {% for detalle in detalle %}
+                    <tr>
+                        <td>{{detalle[0]}}</td>
+                        <td>{{detalle[1]}}</td>
+                    </tr>
+                    {% endfor %}
+                    </tbody>
                 </table>
             </div>
         </div>
@@ -241,6 +275,20 @@
                     <th scope="col">fecha de nacimiento</th>
                 </tr>
                 </thead>
+                <tbody>
+
+                {% for mascota in mascota %}
+                <tr>
+                    <td>{{mascota[0]}}</td>
+                    <td>{{mascota[1]}}</td>
+                    <td>{{mascota[2]}}</td>
+                    <td>{{mascota[3]}}</td>
+                    <td>{{mascota[4]}}</td>
+                    <td>{{mascota[5]}}</td>
+                    <td>{{mascota[6]}}</td>
+                </tr>
+                {% endfor %}
+                </tbody>
             </table>
         </div>
     </div>
@@ -270,6 +318,35 @@
         </div>
     </div>
 </div>
+<script type=text/javascript>
+function botonDetalle(){
+    document.getElementById('nfactura').value =document.getElementById('1').value;
+    document.getElementById('fechaD').value = document.getElementById('1').name;
+    document.getElementById('total').value = document.getElementById('1').className;
+    window.location.href = '/detfactura?username={{QTc_result}}&a='+document.getElementById('1').value+'&b='+document.getElementById('1').name+'&c='+document.getElementById('1').className
+
+
+}
+{% if detalle %}
+document.getElementById('register-tab').ariaSelected = 'false';
+document.getElementById('detalle-tab').ariaSelected = 'true';
+document.getElementById('register').className = "tab-pane fade";
+document.getElementById('detalle').className = "tab-pane fade show active";
+document.getElementById('nfactura').value =document.getElementById('1').value;
+document.getElementById('fechaD').value = document.getElementById('1').name;
+document.getElementById('total').value = document.getElementById('1').className;
+
+{% endif %}
+function botonPago(){
+    document.getElementById('nfactu').value =document.getElementById('2').value;
+    document.getElementById('ptotal').value = document.getElementById('2').className;
+    document.getElementById('update-tab').ariaSelected = 'false';
+    document.getElementById('pago-tab').ariaSelected = 'true';
+    document.getElementById('update').className = "tab-pane fade";
+    document.getElementById('pago').className = "tab-pane fade show active";
+}
+
+</script>
 </body>
 
 </html>
